feat(extended-2.1): add BEM styles name to style.css file and some changes to index.html

--- a/style.css
+++ b/style.css
@@ -1,53 +1,54 @@
 /* Basic Style */
-body {
+.todo-app {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.header__box {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.header__image {
   width: 100%;
 }
-.aaa .more_inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa {
+  .header__box {
     text-align: center;
   }
 }
-.centered-main-page-element {
+.todo-app__main-box {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.todo-app__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.todo-app__task-row-wrapper {
   display: flex;
 }
-ul {
+.todo-app__list {
   margin: 0;
   padding: 0px;
 }
-li,
-h3 {
+.todo-app__item,
+.todo-app__title {
   list-style: none;
 }
-input,
-button {
+.todo-app__item-input,
+.todo-app__task,
+.todo-app__button {
   outline: none;
 }
-button {
+.todo-app__button {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +57,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.todo-app__button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.todo-app__label,
+.todo-app__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +71,9 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.todo-app__item-input,
+.todo-app__task,
+.todo-app__item-input_edit {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +85,23 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.todo-app__task:focus,
+.todo-app__item-input:focus,
+.todo-app__item-input_edit {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.todo-app__label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.todo-app__item-input_edit {
   width: 318px;
 }
 
 /* Task list */
-li {
+.todo-app__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -105,47 +110,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.todo-app__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.todo-app__checkbox {
   margin: 0 10px;
 }
-li > label {
+.todo-app__item-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.todo-app__item-input {
   width: 226px;
 }
-button.delete img {
+.delete__image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete__image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.todo-app__item-label_complited {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.todo-app__item-input {
   display: none;
 }
 
-ul li.editMode input[type="text"] {
+.todo-app__item-input_edit {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.todo-app__item-label_edit {
   display: none;
 }
